--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Kevin Figueira">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Kevin Figueira, Desenvolvedor Front-end, website, Figueira, Kevin Dev, Programador, Portfólio">
+    <meta name="Copyright" content="Kevin Figueira">
+    <meta name="description" content="Desenvolvero Front-End">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo_size_invert.jpg" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 <body>
@@ -16,7 +20,7 @@
         <div class="header_container">
 
             <div class="header_brandName">
-                <a href="#Home"><img src="img/logo2.jpg" alt="logo"></a>
+                <a href="#Home"><img src="assets/img/logo_black.png" alt=""></a>
             </div>
 
             <nav class="header_navbar"><!--NAVBAR START-->
@@ -28,10 +32,10 @@
                     <a href="#container_contact"><li class="list_item">Contato</li></a>
 
                     <div class="list_social">
-                        <a href="http://" target="_blank" rel="noopener noreferrer" title="Contribute code on Github"><i class="fab fa-github fa-lg"></i></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" title="Connect with me on Linkedin"><i class="fab fa-linkedin-in fa-lg"></i></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" title="Like me on Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" title="Follow me on Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="http://github.com/kevinfigueira" target="_blank" rel="noopener noreferrer" title="Contribute code on Github"><i class="fab fa-github fa-lg"></i></a>
+                        <a href="https://www.linkedin.com/in/kevinfigueiradeveloper/" target="_blank" rel="noopener noreferrer" title="Connect with me on Linkedin"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                        <a href="https://www.facebook.com/kevin.figueira.31/" target="_blank" rel="noopener noreferrer" title="Like me on Facebook"><i class="fab fa-facebook-f fa-lg"></i></a>
+                        <a href="https://www.instagram.com/_kevinfigueira_/" target="_blank" rel="noopener noreferrer" title="Follow me on Instagram"><i class="fab fa-instagram fa-lg"></i></a>
                     </div>
                 </ul>
 
@@ -55,7 +59,7 @@
                     </div>
     
                     <div class="wrapper_img">
-                        Imagem
+                        aa
                     </div>
                 </div>
             </section><!--WRAPPER END-->
@@ -64,14 +68,21 @@
                 <article class="about_content">
                     <div class="about">
                         <div class="about_img">a</div>
-                        <div class="about_info">b</div>
+                        <div class="about_info">
+                            <h2>Quem sou</h2>
+                            <p> Meu nome é Kevin Figueira. Sou desenvolvedor Front-end. 
+                            Atualmente estou estudando superior de tecnologia em Análise e Desenvolvimento de Sistema pela Universidade
+                            Cruzeiro do Sul e também tenho estudado bastante sozinho para aprender novas tecnologias.</p>
+                            
+                            <p></p>
+                        </div>
                     </div>
                 </article>
             </section><!--ABOUT END-->
 
             <section id="portfolio_container"><!--PORTFOLIO START-->
                 <div class="portfolio">
-
+                    <h2>Portfólio</h2>
                 </div>
             </section ><!--PORTFOLIO END-->
 
@@ -95,28 +106,28 @@
         <div class="footer">
 
             <div class="footer_brandName">
-                <a href="#Home"><img src="img/logo2.jpg" alt="logo"></a>
+                <a href="#Home"><img src="assets/img/logo_black.png" alt="logo"></a>
             </div>
 
             <div class="footer_menus">
                 <div class="menu_items">
                     <span class="menu">MENU</span>
                     <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>Sobre</li></a>
-                        <a href="#"><li>Portfólio</li></a>
-                        <a href="#"><li>Hard Skills</li></a>
-                        <a href="#"><li>Contato</li></a>
+                        <a href="#header_container"><li>Home</li></a>
+                        <a href="#container_about"><li>Sobre</li></a>
+                        <a href="#portfolio_container"><li>Portfólio</li></a>
+                        <a href="#container_hardSkill"><li>Hard Skills</li></a>
+                        <a href="#container_contact"><li>Contato</li></a>
                     </ul>
                 </div>
 
                 <div class="menu_items">
                     <span class="menu">REDE SOCIAIS</span>
                     <ul>
-                        <a href="#"><li>Github</li></a>
-                        <a href="#"><li>LinkedIn</li></a>
-                        <a href="#"><li>Facebook</li></a>
-                        <a href="#"><li>Instagram</li></a>
+                        <a href="http://github.com/kevinfigueira" target="_blank" rel="noopener noreferrer" title="Contribute code on Github"><li>Github</li></a>
+                        <a href="https://www.linkedin.com/in/kevinfigueiradeveloper/" target="_blank" rel="noopener noreferrer" title="Connect with me on Linkedin"><li>LinkedIn</li></a>
+                        <a href="https://www.facebook.com/kevin.figueira.31/" target="_blank" rel="noopener noreferrer" title="Like me on Facebook"><li>Facebook</li></a>
+                        <a href="https://www.instagram.com/_kevinfigueira_/" target="_blank" rel="noopener noreferrer" title="Follow me on Instagram"><li>Instagram</li></a>
                     </ul>
                 </div>
             </div>
