--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Desenvolvero Front-End">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="assets/img/logo_size_invert.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/LogoBlue.png" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="header_container">
 
             <div class="header_brandName">
-                <a href="index.html"><img src="assets/img/logo_black.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/LogoBlue.png" alt="BrandName" width="150"></a>
             </div>
 
             <nav class="header_navbar"><!--NAVBAR START-->
@@ -82,6 +82,8 @@
                                 Apaixonado por tecnologia desde de criança. Gosto de transformar minhas ideias em trabalhos digitais. 
                                 Logo inciarei minha jornada em Back-End e me tornar um profissional Full-Stack.
                             </p>
+
+                            <button class="about_btn"><a href="assets/img/LogoBlue.png" download>Baixar CV</a></button>
                         </div>
                     </div>
                 </article>
@@ -91,6 +93,18 @@
             <section id="container_hardSkill"><!--HARDSKILL START-->
                 <div class="hardSkill">
                    <h2 class="skill_title">Skills</h2>
+
+                   <div class="skill_content">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" />
+                   </div>
                 </div>
             </section><!--HARDSKILL END-->
 
