--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             Resta alguma dúvida? Preencha os campos abaixo com os seguintes dados que em breve entraremos em contato.
                         </p>
                     </div>
-                    <form action="" class="contact_form">
+                    <form action="" class="contact_form"><!-- Form start -->
                         <fieldset class="form_field">
                             <div class="field_group">
                                 <label for="name">Name:</label>
@@ -388,7 +388,7 @@
                         <fieldset class="form_field">
                             <div class="field_group">
                                 <label for="tel">Telefone:</label>
-                                <input type="tel" name="tel" id="tel" autocomplete="off" required>
+                                <input type="tel" name="tel" id="tel" autocomplete="off">
                             </div>
                             <div class="field_group max">
                                 <label for="subject">Assunto:</label>
@@ -401,7 +401,7 @@
                                 <textarea name="message" id="message" cols="20" rows="10" spellcheck="false" autocapitalize="sentences" placeholder="Deixa sua mensagem aqui..."></textarea>
                             </div>
                         </fieldset>
-                    </form>
+                    </form><!-- Form end -->
                     <button class="form_btn" type="submit" value="Enviar">Enviar contato <i class="fas fa-paper-plane fa-lg"></i></button>
                 </div>
             </section>
