--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
-    <title>Portfolio</title>
+    <title>Portfólio | Kevin Figueira - Frond-end developer</title>
 </head>
 <body>
     <div id="button_scroll"><i class="fas fa-angle-up"></i></div><!--Button Scroll-->
@@ -39,6 +39,11 @@
                     <a href="#portfolio" class="list_item"><li>Portfólio</li></a>
                     <a href="#contact" class="list_item"><li>Contato</li></a>
                 </ul>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav><!--NAVBAR END-->
             
         </div>
@@ -415,7 +420,7 @@
                                 <textarea name="message" id="message" cols="20" rows="10" spellcheck="false" autocapitalize="sentences" placeholder="Deixa sua mensagem aqui..." required></textarea>
                             </div>
                         </fieldset>
-                        <input type="hidden" name="redirectTo" value="">
+                        <input type="hidden" name="redirectTo" value="message.html">
                         <button class="form_btn" type="submit" value="Enviar">Enviar<i class="fas fa-paper-plane fa-lg"></i></button>
                     </form><!-- Form end -->
                 </div>
@@ -437,10 +442,10 @@
            <div class="footer_menu">
             <ul>
                 <a href="index.html"><li>Home</li></a>
-                <a href="#container_about"><li>Sobre</li></a>
-                <a href="#container_hardSkill"><li>Skills</li></a>
-                <a href="#container_portfolio"><li>Portfólio</li></a>
-                <a href="#container_contact"><li>Contato</li></a>
+                <a href="#about"><li>Sobre</li></a>
+                <a href="#hardSkill"><li>Skills</li></a>
+                <a href="#portfolio"><li>Portfólio</li></a>
+                <a href="#contact"><li>Contato</li></a>
             </ul>
            </div>
 
