--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                 <textarea name="message" id="message" cols="20" rows="10" spellcheck="false" autocapitalize="sentences" placeholder="Deixa sua mensagem aqui..." required></textarea>
                             </div>
                         </fieldset>
-                        <input type="hidden" name="redirectTo" value="message.html">
+                        <input type="hidden" name="redirectTo" value="https://kevinfigueira.com/#contact">
                         <button class="form_btn" type="submit" value="Enviar">Enviar<i class="fas fa-paper-plane fa-lg"></i></button>
                     </form><!-- Form end -->
                 </div>
