--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                     <div class="about_info">
                         <h1 class="about_title_01">Quem sou</h1>
                         <h2 class="about_title_02">Quem sou</h2>
-                        <p class="info_about"> Meu nome é Kevin Figueira. Sou desenvolvedor Front-end. 
+                        <p class="info_about"> 
+                            Meu nome é Kevin Figueira. Sou desenvolvedor Front-end. 
                             Atualmente estou cursando superior de tecnologia em Análise e Desenvolvimento de Sistemas. Estou sempre em busca de novos conhecimentos para aperfeiçoar minhas habilidades.</p>
                         
                         <p class="info_about">
