--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         relacionamento interpessoal.
                     </p>
 
-                    <button class="about_btn"><a href="assets/img/Logo-oficial.png" download>Download CV <i
+                    <button class="about_btn"><a href="assets/Doc/CV_Kevin_Figueira.pdf" download>Download CV <i
                                 class="fa fa-download"></i></a></button>
                 </div>
 
